# check-generator

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: document.py  printer.py
src/checkgen/: document.py  models.py  printer.py
