[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkgen"
version = "0.1.2"
description = "Print bank checks"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Yanky Hoffman" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fpdf2 == 2.7.8",
    "num2words == 0.5.13",
]

[project.urls]
Homepage = "https://github.com/yankyhoffman/check-generator"
